--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,17 @@
 {
     margin: 0;
     padding: 0;
+    /* overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll; */
 }
 
 html,
 body
 {
     height: 100vh;
-    font-family: 'Poppins';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
 
 .webgl
@@ -17,4 +21,18 @@ body
     top: 0;
     left: 0;
     outline: none;
+}
+
+#canvasContainer {
+    z-index: -5;
+}
+h1 {
+    font-size: 1rem;
+    z-index: 5;
+    color: whitesmoke;
+}
+
+.h1Container {
+    position: absolute;
+    width: 40vw;
 }
