--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,35 @@ body
     z-index: -5;
 }
 
+@keyframes blink {
+	from { 
+        opacity: 0;
+         transform: scale(0.95);
+    }
+    to { 
+        opacity: .6;
+         transform: scale(1);
+    }
+}
+
+#cursor {
+    height: 3rem;
+    width: 3rem;
+    background-color: aliceblue;
+    border-radius: 100%;
+    
+    position: absolute;
+    z-index: 5;
+    top: 70vh;
+    left: 10vw;
+
+    transform-origin: center;
+    animation: blink .85s infinite;
+    animation-direction: alternate;
+    
+    display: none;
+}
+
 .narrator {
     height: 90vh;
     width: 100vw;
