--- a/src/style.css
+++ b/src/style.css
@@ -75,36 +75,49 @@ body
 #splash {
     width: 100%;
     height: 100%;
+    padding: 0 5vw;
+    
     background-color: black;
 
     position: absolute;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
 
     z-index: 10;
 }
 
 #splash h1 {
-    font-family: 'neacademia_display_trialRg';
-    font-size: 2.5rem;
-    text-align: center;
+    font-family: 'neacademia_display_trialIt';
+    font-size: 5rem;
+    text-align: left;
+
+    margin: 9vh 0 0rem;
+
     color: whitesmoke;
 }
 
 #splash p {
     font-family: 'neacademia_display_trialRg';
-    font-size: 1.5rem;
-    text-align: center;
+    font-size: 1.6rem;
+    text-align: left;
     color: whitesmoke;
+
+    min-width: 10rem;
+    max-width: 32rem;
 }
 
 #splash button {
     font-family: 'neacademia_display_trialRg';
     font-size: 1.5rem;
-    
-    padding: 1rem;
+
+    margin: 4rem 0;
+    padding: 0.75rem 2rem;
+
+    color: white;
+    background: none;
+    border: 1px solid whitesmoke;
 }
 
 
@@ -144,42 +157,78 @@ p i {
 }
 
 #UI {
-    height: 10vh;
-    width: 10vw;
-    margin: 2rem;
+    height: auto;
+    width: auto;
+    margin: 0rem 0rem;
     
     position: absolute;
+
     display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-end;
-    align-items: center;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 
     z-index: 5;
 }
 
 #UI p {
     font-family: 'neacademia_display_trialRg';
-    font-variant: small-caps;
-    font-size: 1rem;
-    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    font-size: .85rem;
+    text-align: left;
     color: whitesmoke;
         
-    position: absolute;
-    z-index: 5;
+    position: relative;
+    z-index: inherit;
 
-    min-width: 30rem;
-    max-width: 40rem;
-    width: 60vw;
+    /* min-width: 30rem;
+    max-width: 40rem; */
+    width: auto;
     
     text-shadow: 1px 1px 4px rgb(0 0 0 / 56%);
 }
 
+#UI p i {
+    text-transform: capitalize;
+    font-variant: normal !important;
+    letter-spacing: 0;
+    font-size: 1.1em;
+   
+}
+
 #UI div {
-    height: 2rem;
+    overflow: visible;
+
+    height: auto;
     width: auto;
+    margin: 1px;
+
+    z-index: inherit;
 
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-end;
     align-items: center;
+}
+
+#UI div span {
+    opacity: .5;
+}
+
+#UI div #active {
+    opacity: 1;
+}
+
+#UI img {
+    width: 1.5rem;
+    height: auto;
+    margin: 0 1rem;
+
+    z-index: inherit;
+}
+
+#chapterNav {
+    z-index: 11 !important;
+    margin: 1rem 0 !important;
 }
