--- a/src/style.css
+++ b/src/style.css
@@ -158,6 +158,15 @@ video {
     color: white;
     background: none;
     border: 1px solid whitesmoke;
+
+    box-shadow: 0 0 50px #fff;
+}
+
+#splash .deactivated {
+    color: grey !important;
+    background: none !important;
+    border: 1px solid grey !important;
+    box-shadow: none !important;
 }
 
 
